--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuedraggable",
+  "name": "vuedraggable-es",
   "version": "4.1.0",
   "description": "draggable component for vue",
   "license": "MIT",
@@ -11,6 +11,7 @@
   },
   "private": false,
   "scripts": {
+    "build:lib": "vite build",
     "serve": "vue-cli-service serve ./example/main.js --open --mode local",
     "build:doc": "vue-cli-service build ./example/main.js --dest docs --mode development",
     "build": "vue-cli-service build --name vuedraggable --entry ./src/vuedraggable.js --target lib",
@@ -35,9 +36,10 @@
     "sortablejs": "1.14.0"
   },
   "peerDependencies": {
-    "vue": "^3.0.1"
+    "vue": "^3.2.31"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^2.1.0",
     "@types/sortablejs": "^1.10.7",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
@@ -60,10 +62,11 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "typescript": "^4.3.5",
-    "vue": "^3.0.1",
+    "vue": "^3.2.31",
     "vue-jest": "^5.0.0-alpha.5",
     "vue-router": "^4.0.0-beta.13",
-    "vuex": "4.0.0-beta.4"
+    "vuex": "4.0.0-beta.4",
+    "vite": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
@@ -96,5 +99,5 @@
     "types/*",
     "src/*"
   ],
-  "module": "dist/vuedraggable.umd.js"
+  "module": "dist/index.es.js"
 }
