--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:doc": "vue-cli-service build ./example/main.js --dest docs --mode development",
     "build": "vue-cli-service build --name vuedraggable --entry ./src/vuedraggable.js --target lib",
     "lint": "vue-cli-service lint src example",
-    "prepublishOnly": "npm run lint && npm run test:unit && npm run build:doc && npm run build:type && npm run build",
+    "prepublishOnly": "npm run build:doc && npm run build:type && vite build",
     "test:unit": "vue-cli-service test:unit --coverage",
     "test:coverage": "vue-cli-service test:unit --coverage --verbose && codecov",
     "build:type": "tsc"
